# python-training-b1

./: .gitignore  .replit  pyproject.toml
code/: .gitignore
code/module_1/: generate_test_data.php
code/module_1/config/: data_spec.json  data_spec.xml
code/module_1/src/: test.xlsx
code/module_1/src/binary_reader/: __main__.py
code/module_1/src/binary_reader/configuration/: __init__.py
code/module_1/src/binary_reader/inp/: __init__.py
code/module_1/src/binary_reader/output/: __init__.py
code/module_2/: .gitignore  build.sh  setup.cfg
code/module_3/: .gitignore  build.sh  setup.cfg
code/module_3/src/test_lib/: __main__.py
code/module_3/src/test_lib/lib/: test.cpp
code/module_4/src/webserver/: __main__.py
code/module_4/src/webserver/templates/: index.html  layout.html
code/module_5/src/scraper/: __main__.py
