[tool.poetry]
name = "repl_python3_python-training-b1"
version = "0.1.0"
description = ""
authors = ["porvik <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
somewhere = "^0.0.1"
lxml = "^4.6.3"
matplotlib = "^3.4.2"
openpyxl = "^3.0.7"
build = "^0.5.1"
Flask = "^2.0.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
