[metadata]
name = binary_reader
version = 0.0.1
author = Viktor Porvaznik
author_email = viktor.porvaznik@cgi.com
description = A simple binary reader
url = https://github.com/porvik/python-training-b1
keywords = binary, xml
license = GNU
classifiers =  # https://pypi.org/classifiers/
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Development Status :: 2 - Pre-Alpha
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cycler==0.10.0
    et-xmlfile==1.1.0
    kiwisolver==1.3.1
    lxml==4.6.3
    matplotlib==3.3.4
    numpy==1.19.5
    openpyxl==3.0.7
    Pillow==8.3.1
    pyparsing==2.4.7
    python-dateutil==2.8.2
    six==1.16.0

[options.packages.find]
where = src