[metadata]
name = test_lib
version = 0.0.1
author = Viktor Porvaznik
author_email = viktor.porvaznik@cgi.com
description = Simple app calling CPP code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/porvik/python-training-b1
keywords = cpp
license = GNU
classifiers =  # https://pypi.org/classifiers/
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Development Status :: 2 - Pre-Alpha
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =

[options.data_files]
/test_lib/lib = src/test_lib/lib/lib_test.so

[options.packages.find]
where = src